# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testing.md  timesheet.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Monopoli.md
src/: database.py  database_exercise_tools.py  database_tools.py  database_user_tools.py  main.py  main_gui.py
src/entities/: exercise.py  regular_user.py
src/services/: exercise_service.py  user_service.py
src/tests/: database_exercise_tools_test.py  database_tools_test.py  database_user_tools_test.py  exercise_service_test.py  exercise_test.py  regular_user_test.py  user_service_test.py
src/ui/: gui.py  ui.py
